Fix cargo warning
Prevents "unexpected `cfg` condition name: `nightly`"

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,9 @@ all-features = true
 [package.metadata.playground]
 features = ["all"]
 
+[lints.rust]
+unexpected_cfgs = { level = "warn", check-cfg = ['cfg(nightly)'] }
+
 [features]
 default = []
 all = ["json"]
